--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
     "lodash": "^4.17.4",
+    "ng2-bootstrap": "^1.1.16-11",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
