implement topology env; read only

--- a/server/TopologyManager.WebApi/Web.config
+++ b/server/TopologyManager.WebApi/Web.config
@@ -7,19 +7,45 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
+
+    <authorization>
+      <allow users="?" verbs="OPTIONS" />
+    </authorization>
+
     <httpModules>
     </httpModules>
   </system.web>
   <system.webServer>
+    <rewrite>
+      <rules>
+        <rule name="SpecificRewrite" stopProcessing="true">
+          <match url="/*" />
+          <conditions>
+            <add input="{REQUEST_METHOD}" pattern="^OPTIONS" />
+          </conditions>
+          <action type="CustomResponse" statusCode="200" />
+        </rule>
+      </rules>
+    </rewrite>
+
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
     </modules>
-  <handlers>
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+    <httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Request-Headers" value="Content-Type,Authorization" />
+        <add name="Access-Control-Allow-Headers" value="Content-Type,Authorization" />
+        <add name="Access-Control-Allow-Origin" value="http://localhost:8000" />
+        <add name="Access-Control-Allow-Credentials" value="true" />
+      </customHeaders>
+    </httpProtocol>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
