--- a/server/TopologyManager.WebApi/TopologyManager.WebApi.csproj
+++ b/server/TopologyManager.WebApi/TopologyManager.WebApi.csproj
@@ -95,7 +95,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\TopologyEnvironmentController.cs" />
-    <Compile Include="Extensions\ExtensionMethods.cs" />
+    <Compile Include="Service\TopologyManagerService.cs" />
     <Compile Include="Models\TopologyEnvironment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
