--- a/server/TopologyManager.WebApi/Web.config
+++ b/server/TopologyManager.WebApi/Web.config
@@ -43,6 +43,7 @@
         <add name="Access-Control-Allow-Headers" value="Content-Type,Authorization" />
         <add name="Access-Control-Allow-Origin" value="http://localhost:8000" />
         <add name="Access-Control-Allow-Credentials" value="true" />
+        <add name="Access-Control-Allow-Method" value="PUT, GET, DELETE, POST" />
       </customHeaders>
     </httpProtocol>
   </system.webServer>
