--- a/client/package.json
+++ b/client/package.json
@@ -10,46 +10,48 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/common": "2.4.0",
+    "@angular/compiler": "2.4.0",
+    "@angular/core": "2.4.0",
+    "@angular/forms": "2.4.0",
+    "@angular/http": "2.4.0",
+    "@angular/platform-browser": "2.4.0",
+    "@angular/platform-browser-dynamic": "2.4.0",
     "@angular/router": "3.0.0",
-    "@angular/upgrade": "2.0.0",
-    "angular2-in-memory-web-api": "0.0.21",
+    "@angular/upgrade": "2.4.0",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
     "lodash": "^4.17.4",
     "ng2-bootstrap": "^1.1.16-11",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.0.1",
     "systemjs": "0.19.27",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.7.6"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.35",
-    "@types/jasmine": "^2.5.40",
-    "@types/node": "^6.0.58",
     "colors": "^1.1.2",
     "concurrently": "^2.2.0",
     "del": "^2.1.0",
-    "fs-extra": "^1.0.0",
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-html-replace": "^1.6.2",
     "gulp-load-plugins": "^1.4.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-tslint": "^6.1.3",
-    "gulp-typescript": "^2.8.0",
+    "gulp-typescript": "^3.1.4",
+    "gulp-uglify": "^2.0.1",
+    "install": "^0.8.4",
     "jasmine": "^2.5.2",
     "lite-server": "^2.2.2",
+    "npm": "^4.1.2",
+    "systemjs-builder": "^0.16.0",
     "ts-node": "^1.7.0",
     "tsconfig-glob": "^0.4.3",
     "tslint": "3.7.3",
-    "typescript": "^2.1.4",
-    "typings": "^1.3.2",
+    "typescript": "^2.1.5",
+    "typings": "^2.1.0",
     "wrench": "^1.5.9"
   }
 }
