--- a/server/TopologyManager.WebApi/packages.config
+++ b/server/TopologyManager.WebApi/packages.config
@@ -9,4 +9,5 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="tridion-extensions-coreservice" version="2.0.1" targetFramework="net46" />
 </packages>
