fix side selection

--- a/server/TopologyManager.WebApi/TopologyManager.WebApi.csproj
+++ b/server/TopologyManager.WebApi/TopologyManager.WebApi.csproj
@@ -117,6 +117,7 @@
     </Content>
     <Content Include="packages.config" />
     <Content Include="env.json" />
+    <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
