--- a/server/TopologyManager.WebApi/Web.config
+++ b/server/TopologyManager.WebApi/Web.config
@@ -29,7 +29,7 @@
     </rewrite>
 
     <validation validateIntegratedModeConfiguration="false" />
-    <modules>
+    <modules runAllManagedModulesForAllRequests="false">
     </modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
