initial cmenvironment setup

--- a/server/TopologyManager.WebApi/Web.config
+++ b/server/TopologyManager.WebApi/Web.config
@@ -7,11 +7,10 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
-
+    <authentication mode="Windows" />
     <authorization>
       <allow users="?" verbs="OPTIONS" />
     </authorization>
-
     <httpModules>
     </httpModules>
   </system.web>
