--- a/server/TopologyManager.WebApi/Web.config
+++ b/server/TopologyManager.WebApi/Web.config
@@ -7,9 +7,9 @@
   <appSettings>
     <!--<add key="AuthorizeGroup" value="My Topo" />-->
     <!--<add key="authorized-group" value="Topology Manager Administrators" />-->
-    <add key="domain" value="dmz3" />
-    <add key="username" value="extshsi" />
-    <add key="password" value="Tr14Sh AjP" />
+    <add key="domain" value="trivident" />
+    <add key="username" value="topoclient" />
+    <add key="password" value="Tr11d3nt" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
