--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,4 +8,9 @@ pipelines:
   default:
     - step:
         script:
+            # Generate build number
+          - BUILD_NUMBER=`git log --oneline | wc -l`
+          - echo "Build number':' ${BUILD_NUMBER}"
+          - nuget restore
+           # Build solution
           - MONO_IOMAP=case xbuild /t:Build /p:Configuration="Release" /p:Platform="Any CPU" server/TopologyManager.WebApi.sln
