bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,5 +7,6 @@ pipelines:
           - node --version
           - npm --version
           - npm install -g angular-cli 
+          - cd client
           - npm install
           - ng build
