--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,11 +20,13 @@ install:
 before_build:
   - cd %APPVEYOR_BUILD_FOLDER%
   - cd client
-  - npm install
-  - ng build --prod --output ..\build\
+#  - npm install
+#  - ng build --prod --output ..\build\
   # back to original folder
   - cd %APPVEYOR_BUILD_FOLDER%
+  - echo %CD%
 build:
+  echo: %CD%
   project: build.msbuild
   verbosity: normal
 artifacts:
