--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,7 +26,7 @@ before_build:
   - cd %APPVEYOR_BUILD_FOLDER%
   - echo %CD%
 build:
-  echo: %CD%
+  - echo: %CD%
   project: build.msbuild
   verbosity: normal
 artifacts:
