--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ assembly_info:
   assembly_informational_version: '{version}'
 install:
 - ps: Install-Product node $Env:nodejs_version
-- npm install -g angular-cli
+#- npm install -g angular-cli
 # scripts to run before build
 before_build:
   - cd %APPVEYOR_BUILD_FOLDER%
@@ -25,7 +25,7 @@ before_build:
   # back to original folder
   - ps: cd ..
 build:
-  project: build.msbuild
+  project: msbuild.build
   verbosity: normal
 artifacts:
 - path: build/package/**/*.zip
