--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,8 +23,7 @@ before_build:
 #  - npm install
 #  - ng build --prod --output ..\build\
   # back to original folder
-  - cd %APPVEYOR_BUILD_FOLDER%
-  - cd server
+  - cd ..\server
 build:
   project: build.msbuild
   verbosity: normal
