--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,11 +19,12 @@ install:
 # scripts to run before build
 before_build:
   - cd %APPVEYOR_BUILD_FOLDER%
-  - cd client
+  - ps: cd client  
 #  - npm install
 #  - ng build --prod --output ..\build\
   # back to original folder
-  - cd ..\server
+  - ps: cd ..
+  - ps: cd server  
 build:
   project: build.msbuild
   verbosity: normal
