--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,12 +22,9 @@ before_build:
   - cd client  
 #  - npm install
 #  - ng build --prod --output ..\build\
-  # back to original folder
-  - cd ..
-  - cd server 
-  - ls
 build:
-  project: server\TopologyManager.WebApi.sln
+  - cd server
+  project: msbuild.build
   verbosity: normal
 artifacts:
 - path: build/package/**/*.zip
