--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,8 +23,7 @@ before_build:
 #  - npm install
 #  - ng build --prod --output ..\build\
 build:
-  - cd server
-  project: msbuild.build
+  project: server\msbuild.build
   verbosity: normal
 artifacts:
 - path: build/package/**/*.zip
