--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,6 +22,7 @@ before_build:
   - cd client  
 #  - npm install
 #  - ng build --prod --output ..\build\
+  - nuget restore
 build:
   project: server\msbuild.build
   verbosity: normal
