--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,22 +16,18 @@ assembly_info:
 install:
  - ps: Install-Product node $Env:nodejs_version
  - choco install msbuild.communitytasks -y
-# - npm install -g angular-cli
+ - npm install -g angular-cli
 # scripts to run before build
 before_build:
   - cd %APPVEYOR_BUILD_FOLDER%
   - cd client  
-#  - npm install
-#  - ng build --prod --output ..\build\
+  - npm install
+  - ng build --prod --output ..\build\
   - cd ..\server
   - nuget restore
 build:
   project: server\msbuild.build
   verbosity: normal
-after_build:
-  - cd %APPVEYOR_BUILD_FOLDER%
-  - cd server\TopologyManager.WebApi\obj\Release\Package\PackageTmp
-  - ls
 artifacts:
 - path: build/package/**/*.zip
   name: Zip Archive
