--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,6 +23,8 @@ before_build:
   - cd client  
   - npm install
   - ng build --prod --output ..\build\
+  - cd ..\build
+  - ls
   - cd ..\server
   - nuget restore
 build:
