--- a/client/package.json
+++ b/client/package.json
@@ -31,9 +31,9 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.3.1",
+    "@angular/cli": "^1.0.0-beta.32.3",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.26",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
