self contained build process

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,13 +16,13 @@ assembly_info:
 install:
  - ps: Install-Product node $Env:nodejs_version
  - choco install msbuild.communitytasks -y
- - npm install -g @angular/cli
+# - npm install -g @angular/cli
 # scripts to run before build
 before_build:
   - cd %APPVEYOR_BUILD_FOLDER%
   - cd client  
   - npm install
-  - ng build --prod --output-path=..\build\
+  - npm run build-prod -- --output-path='..\build'
   - cd ..\server
   - nuget restore
 build:
