create nuget package for coreservice client dll.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,13 @@ assembly_info:
   assembly_version: '{version}'
   assembly_file_version: '{version}'
   assembly_informational_version: '{version}'
+environment:
+ nuget-user:
+    secure: +mXMc/KMOWfKKmSsClCe5Q==
+  nuget-password:
+    secure: oMmO/KTM/mS5HlnSgEeRoQ==
 install:
+ - nuget sources add -Name Incentro -Source http://private-nuget.azurewebsites.net/nuget -UserName %nuget-user% -Password %nnuget-password%
  - ps: Install-Product node $Env:nodejs_version
  - choco install msbuild.communitytasks -y
 # - npm install -g @angular/cli
