--- a/server/TopologyManager.WebApi/packages.config
+++ b/server/TopologyManager.WebApi/packages.config
@@ -14,5 +14,6 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="NLog" version="4.4.2" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="Tridion.CoreService.Client" version="8.1.1" targetFramework="net46" />
   <package id="tridion-extensions-coreservice" version="2.0.1" targetFramework="net46" />
 </packages>
