--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ environment:
  nuget-password:
    secure: oMmO/KTM/mS5HlnSgEeRoQ==
 install:
- - nuget sources add -Name Incentro -Source http://private-nuget.azurewebsites.net/nuget -UserName %nuget-user% -Password %nnuget-password%
+ - nuget sources add -Name Incentro -Source http://private-nuget.azurewebsites.net/nuget -UserName %nuget-user% -Password %nuget-password%
  - ps: Install-Product node $Env:nodejs_version
  - choco install msbuild.communitytasks -y
 # - npm install -g @angular/cli
