--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ assembly_info:
   assembly_file_version: '{version}'
   assembly_informational_version: '{version}'
 install:
- - nuget sources add -Name Incentro -Source http://private-nuget.azurewebsites.net/nuget -UserName %nuget-user% -Password %nuget-password%
+ - nuget sources add -Name Private-nuget -Source http://private-nuget.azurewebsites.net/nuget -UserName %nuget-user% -Password %nuget-password%
  - ps: Install-Product node $Env:nodejs_version
  - choco install msbuild.communitytasks -y
 # - npm install -g @angular/cli
