--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ pull_requests:
   do_not_increment_build_number: true
 branches:
   only:
-  - feature/CI
+  - develop
 configuration: Release
 assembly_info:
   patch: true
