removed npm output for CI build

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,7 +26,7 @@ install:
 before_build:
   - cd %APPVEYOR_BUILD_FOLDER%
   - cd client  
-  - npm install
+  - npm install --depth 0
   - npm run build-prod -- --output-path=..\build --progress=false
   - cd ..\server
   - nuget restore
