--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ng": "ng",
     "build": "webpack",
-    "build-prod": "ng build --prod",
+    "build:prod": "webpack -p --env.production=true",
     "start": "webpack-dev-server --host 127.0.0.1 --port 4200",
     "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
     "test": "karma start ./karma.conf.js",
@@ -35,36 +35,37 @@
     "@angular/compiler-cli": "^2.3.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
+    "autoprefixer": "^6.5.3",
     "codelyzer": "~2.0.0-beta.1",
+    "css-loader": "^0.26.1",
+    "cssnano": "^3.10.0",
+    "exports-loader": "^0.6.3",
+    "file-loader": "^0.10.0",
+    "istanbul-instrumenter-loader": "^2.0.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
+    "json-loader": "^0.5.4",
     "karma": "1.2.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
-    "protractor": "~4.0.13",
-    "ts-node": "1.2.1",
-    "tslint": "^4.3.0",
-    "typescript": "~2.0.3",
-    "webpack-dev-server": "~2.3.0",
-    "autoprefixer": "^6.5.3",
-    "css-loader": "^0.26.1",
-    "cssnano": "^3.10.0",
-    "exports-loader": "^0.6.3",
-    "file-loader": "^0.10.0",
-    "json-loader": "^0.5.4",
     "karma-sourcemap-loader": "^0.3.7",
     "less-loader": "^2.2.3",
     "postcss-loader": "^0.13.0",
     "postcss-url": "^5.1.2",
+    "protractor": "~4.0.13",
     "raw-loader": "^0.5.1",
     "sass-loader": "^4.1.1",
     "script-loader": "^0.7.0",
     "source-map-loader": "^0.1.5",
-    "istanbul-instrumenter-loader": "^2.0.0",
     "style-loader": "^0.13.1",
     "stylus-loader": "^2.4.0",
-    "url-loader": "^0.5.7"
+    "ts-node": "1.2.1",
+    "tslint": "^4.3.0",
+    "typescript": "~2.0.3",
+    "url-loader": "^0.5.7",
+    "webpack-config-assign": "^1.0.0",
+    "webpack-dev-server": "~2.3.0"
   }
 }
