--- a/client/package.json
+++ b/client/package.json
@@ -15,57 +15,57 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.3.1",
-    "@angular/compiler": "^2.3.1",
-    "@angular/core": "^2.3.1",
-    "@angular/forms": "^2.3.1",
-    "@angular/http": "^2.3.1",
-    "@angular/platform-browser": "^2.3.1",
-    "@angular/platform-browser-dynamic": "^2.3.1",
-    "@angular/router": "^3.4.5",
+    "@angular/common": "^4.0.1",
+    "@angular/compiler": "^4.0.1",
+    "@angular/core": "^4.0.1",
+    "@angular/forms": "^4.0.1",
+    "@angular/http": "^4.0.1",
+    "@angular/platform-browser": "^4.0.1",
+    "@angular/platform-browser-dynamic": "^4.0.1",
+    "@angular/router": "^4.0.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
-    "ng2-bootstrap": "^1.3.1",
-    "rxjs": "^5.0.1",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2"
+    "ng2-bootstrap": "^1.6.3",
+    "rxjs": "^5.3.0",
+    "ts-helpers": "^1.1.2",
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0-beta.32.3",
-    "@angular/compiler-cli": "^2.3.1",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
-    "autoprefixer": "^6.5.3",
-    "codelyzer": "~2.0.0-beta.1",
-    "css-loader": "^0.26.1",
+    "@angular/cli": "^1.0.0",
+    "@angular/compiler-cli": "^4.0.1",
+    "@types/jasmine": "2.5.47",
+    "@types/node": "^7.0.12",
+    "autoprefixer": "^6.7.7",
+    "codelyzer": "~2.1.1",
+    "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
-    "exports-loader": "^0.6.3",
-    "file-loader": "^0.10.0",
+    "exports-loader": "^0.6.4",
+    "file-loader": "^0.11.1",
     "istanbul-instrumenter-loader": "^2.0.0",
     "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
+    "jasmine-spec-reporter": "3.2.0",
     "json-loader": "^0.5.4",
-    "karma": "1.2.0",
+    "karma": "1.6.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-remap-istanbul": "^0.6.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "less-loader": "^2.2.3",
-    "postcss-loader": "^0.13.0",
-    "postcss-url": "^5.1.2",
-    "protractor": "~4.0.13",
+    "less-loader": "^4.0.3",
+    "postcss-loader": "^1.3.3",
+    "postcss-url": "^6.0.4",
+    "protractor": "~5.1.1",
     "raw-loader": "^0.5.1",
-    "sass-loader": "^4.1.1",
+    "sass-loader": "^6.0.3",
     "script-loader": "^0.7.0",
-    "source-map-loader": "^0.1.5",
-    "style-loader": "^0.13.1",
-    "stylus-loader": "^2.4.0",
-    "ts-node": "1.2.1",
-    "tslint": "^4.3.0",
-    "typescript": "~2.0.3",
-    "url-loader": "^0.5.7",
+    "source-map-loader": "^0.2.1",
+    "style-loader": "^0.16.1",
+    "stylus-loader": "^3.0.1",
+    "ts-node": "3.0.2",
+    "tslint": "^5.0.0",
+    "typescript": "~2.2.2",
+    "url-loader": "^0.5.8",
     "webpack-config-assign": "^1.0.0",
-    "webpack-dev-server": "~2.3.0"
+    "webpack-dev-server": "~2.4.2"
   }
 }
