--- a/client/package.json
+++ b/client/package.json
@@ -63,6 +63,7 @@
     "stylus-loader": "^3.0.1",
     "ts-node": "3.0.2",
     "tslint": "^5.0.0",
+    "tslint-loader": "^3.5.2",
     "typescript": "~2.2.2",
     "url-loader": "^0.5.8",
     "webpack-config-assign": "^1.0.0",
