--- a/server/TopologyManager.WebApi/Web.config
+++ b/server/TopologyManager.WebApi/Web.config
@@ -9,7 +9,7 @@
     <!--<add key="authorized-group" value="Topology Manager Administrators" />-->
     <add key="domain" value="" />
     <add key="username" value="administrator" />
-    <add key="password" value="Tr1v1d3nt" />
+    <add key="password" value="" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
