--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,11 +41,11 @@ artifacts:
 - path: build/package/**/*.zip
   name: Zip Archive
 deploy:
-  release: G4TM-v$(appveyor_build_version)
+  release: v$(appveyor_build_version)
   description: ''
   provider: GitHub
   auth_token:
-    secure: jnOdjl7XtHQRIdu8N62H7Lo30OOjtDpV9VtnCBmgd+7hVrnqu71dPMQ4mKSSHHQj # your encrypted token from GitHub
+    secure: jnOdjl7XtHQRIdu8N62H7Lo30OOjtDpV9VtnCBmgd+7hVrnqu71dPMQ4mKSSHHQj    # your encrypted token from GitHub
   artifact: build/package/**/*.zip            # upload all NuGet packages to release assets
   draft: false
   prerelease: false
