--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: 0.0.1.{build}
+version: 1.0.0.{build}
 environment:
   nodejs_version: "7.5.0"
   nuget-user:
@@ -10,6 +10,7 @@ pull_requests:
 branches:
   only:
   - master
+  - develop
 configuration: Release
 assembly_info:
   patch: true
